@@ -812,6 +812,7 @@ plugins/plugins-available/panorama/root/images/page_lightning.png
 plugins/plugins-available/panorama/root/images/page_paste.png
 plugins/plugins-available/panorama/root/images/picture.png
 plugins/plugins-available/panorama/root/images/remove.png
+plugins/plugins-available/panorama/root/images/right.png
 plugins/plugins-available/panorama/root/images/s.gif
 plugins/plugins-available/panorama/root/images/server.png
 plugins/plugins-available/panorama/root/images/server_connect.png
